--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi==0.110.0
+uvicorn==0.27.0
 pydantic==2.5.0
 python-dotenv==1.0.0
 supabase
 psycopg2-binary==2.9.9
+httpx==0.25.1
