--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.110.0
 uvicorn==0.27.0
-pydantic==2.5.0
+pydantic==2.9.1
 python-dotenv==1.0.0
 supabase
 psycopg2-binary==2.9.9
 httpx==0.25.1
+pytest==7.4.3
+pytest-asyncio==0.21.1
